# rust-backtest

./: .vimspector.json  Cargo.toml  README.md  dev.Dockerfile  docker-compose.yaml
src/: main.backup.rs  main.rs
src/data/: mod.rs  model.rs  sql.rs
src/data/query/: config.rs  fluentinsert.rs  mod.rs  query.rs  rdbmsstore.rs  store.rs  transaction.rs
tests/: candles.json  out.txt
